Equation not showing up properly on browser

--- a/Birthday Paradox.ipynb
+++ b/Birthday Paradox.ipynb
@@ -58,7 +58,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ 1 - (\\frac{n−1}{n}) * \\frac{n−2}{n} * \\frac{n−3}{n} * ...\\\\=1− \\prod_{i=1}^{k-1}(\\frac{n-i}{n})$"
+    "$1 - (\\frac{n-1}{n})*(\\frac{n-2}{n})*...$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$=1− \\prod_{i=1}^{k-1}(\\frac{n-i}{n})$"
    ]
   },
   {
